--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -68,3 +68,5 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/Menu")
 +MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/Test")
 
+[/Script/Engine.GameSession]
+bRequiresPushToTalk=true
