--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=BANKA
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/Menu.Menu
+EditorStartupMap=/Game/ThirdPersonBP/Maps/Test.Test
 GameDefaultMap=/Game/ThirdPersonBP/Maps/Menu.Menu
 TransitionMap=
 bUseSplitscreen=True
@@ -30,6 +30,10 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [OnlineSubsystem]
 DefaultPlatformService=Steam
+bHasVoiceEnabled=true
+
+[Voice]
+bEnabled=true
 
 [OnlineSubsystemSteam]
 bEnabled=true
