--- a/BANKA.uproject
+++ b/BANKA.uproject
@@ -22,6 +22,10 @@
 		{
 			"Name": "AdvancedSteamSessions",
 			"Enabled": true
+		},
+		{
+			"Name": "SoundUtilities",
+			"Enabled": true
 		}
 	]
 }
