--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=BANKA
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/Test.Test
+EditorStartupMap=/Game/ThirdPersonBP/Maps/Banka.Banka
 GameDefaultMap=/Game/ThirdPersonBP/Maps/Menu.Menu
 TransitionMap=
 bUseSplitscreen=True
