--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=BANKA
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPersonBP/Maps/Banka.Banka
-GameDefaultMap=/Game/ThirdPersonBP/Maps/Menu.Menu
+GameDefaultMap=/Game/ThirdPersonBP/Maps/Banka.Banka
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
