--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,7 +6,7 @@ ProjectName=Third Person BP Game Template
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="C:/Users/Daniil/Desktop/kek/WindowsNoEditor/WindowsNoEditor")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -65,8 +65,8 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/Menu")
-+MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/Test")
++MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/Banka")
 
 [/Script/Engine.GameSession]
 bRequiresPushToTalk=true
+
