--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,7 +6,7 @@ ProjectName=Third Person BP Game Template
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
-StagingDirectory=(Path="C:/Users/Daniil/Desktop/kek/WindowsNoEditor/WindowsNoEditor")
+StagingDirectory=(Path="C:/Users/Daniil/Desktop/kek")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -66,6 +66,7 @@ bSkipMovies=False
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/Banka")
++MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/Menu")
 
 [/Script/Engine.GameSession]
 bRequiresPushToTalk=true
