--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=48704E8D40C6202E99F09CBB904E561E
-ProjectName=Third Person BP Game Template
+ProjectName=BANKA
+CompanyName=Baldyozhix Games
+CompanyDistinguishedName=Baldyozhix Games
+CopyrightNotice=Baldyozhix Games
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
@@ -66,7 +69,6 @@ bSkipMovies=False
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/Banka")
-+MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/Menu")
 
 [/Script/Engine.GameSession]
 bRequiresPushToTalk=true
