--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -42,3 +42,6 @@ SteamDevAppId=480
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.MotionBlur=False
+
